; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_jump_label.c_static_key_count.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_jump_label.c_static_key_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.static_key = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @static_key_count(%struct.static_key* %0) #0 {
  %2 = alloca %struct.static_key*, align 8
  %3 = alloca i32, align 4
  store %struct.static_key* %0, %struct.static_key** %2, align 8
  %4 = load %struct.static_key*, %struct.static_key** %2, align 8
  %5 = getelementptr inbounds %struct.static_key, %struct.static_key* %4, i32 0, i32 0
  %6 = call i32 @atomic_read(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp sge i32 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  br label %12

11:                                               ; preds = %1
  br label %12

12:                                               ; preds = %11, %9
  %13 = phi i32 [ %10, %9 ], [ 1, %11 ]
  ret i32 %13
}

declare dso_local i32 @atomic_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
